# holomorph

./: CMakeLists.txt  README.md  purebuild.sh
src/: main.c  main.cpp  window.c  window.cpp  window.hpp
